// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StudiosShowcase – visual regression > matches the CTA button snapshot for Innovators Hub 1`] = `
<button
  class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
  style="background: linear-gradient(135deg, rgb(0, 102, 255), rgba(0, 102, 255, 0.8));"
>
  Start creating 
  <svg
    class="lucide lucide-arrow-right"
    fill="none"
    height="15"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="15"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
    <path
      d="m12 5 7 7-7 7"
    />
  </svg>
</button>
`;

exports[`StudiosShowcase – visual regression > matches the CTA button snapshot for NeuraSocial 1`] = `
<button
  class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
  style="background: linear-gradient(135deg, rgb(20, 184, 166), rgba(20, 184, 166, 0.8));"
>
  Start creating 
  <svg
    class="lucide lucide-arrow-right"
    fill="none"
    height="15"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="15"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
    <path
      d="m12 5 7 7-7 7"
    />
  </svg>
</button>
`;

exports[`StudiosShowcase – visual regression > matches the CTA button snapshot for Podcast Studio 1`] = `
<button
  class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
  style="background: linear-gradient(135deg, rgb(245, 158, 11), rgba(245, 158, 11, 0.8));"
>
  Start creating 
  <svg
    class="lucide lucide-arrow-right"
    fill="none"
    height="15"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="15"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
    <path
      d="m12 5 7 7-7 7"
    />
  </svg>
</button>
`;

exports[`StudiosShowcase – visual regression > matches the CTA button snapshot for Store Builder 1`] = `
<button
  class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
  style="background: linear-gradient(135deg, rgb(0, 200, 150), rgba(0, 200, 150, 0.8));"
>
  Start creating 
  <svg
    class="lucide lucide-arrow-right"
    fill="none"
    height="15"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="15"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
    <path
      d="m12 5 7 7-7 7"
    />
  </svg>
</button>
`;

exports[`StudiosShowcase – visual regression > matches the CTA button snapshot for Threaditor 1`] = `
<button
  class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
  style="background: linear-gradient(135deg, rgb(155, 92, 246), rgba(155, 92, 246, 0.8));"
>
  Start creating 
  <svg
    class="lucide lucide-arrow-right"
    fill="none"
    height="15"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="15"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
    <path
      d="m12 5 7 7-7 7"
    />
  </svg>
</button>
`;

exports[`StudiosShowcase – visual regression > matches the CTA button snapshot for Video Studio 1`] = `
<button
  class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
  style="background: linear-gradient(135deg, rgb(255, 107, 53), rgba(255, 107, 53, 0.8));"
>
  Start creating 
  <svg
    class="lucide lucide-arrow-right"
    fill="none"
    height="15"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="15"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
    <path
      d="m12 5 7 7-7 7"
    />
  </svg>
</button>
`;

exports[`StudiosShowcase – visual regression > matches the card markup snapshot for Innovators Hub 1`] = `
<article
  class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
  style="border-color: rgba(255, 255, 255, 0.08);"
>
  <div
    class="rounded-xl p-4 mb-4 border overflow-hidden"
    style="border-color: rgba(0, 102, 255, 0.19); background: linear-gradient(135deg, rgba(0, 102, 255, 0.082), transparent 70%);"
  >
    <div>
      <div
        class="flex items-center justify-between mb-2"
      >
        <span
          class="text-xs text-white/60"
        >
          Proposal RIP-47
        </span>
        <span
          class="text-xs font-mono text-[#0066FF] flex items-center gap-1"
        >
          <svg
            class="lucide lucide-sparkles"
            fill="none"
            height="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
            />
            <path
              d="M20 3v4"
            />
            <path
              d="M22 5h-4"
            />
            <path
              d="M4 17v2"
            />
            <path
              d="M5 18H3"
            />
          </svg>
           68% yes
        </span>
      </div>
      <div
        class="h-1.5 rounded-full bg-white/10 overflow-hidden flex"
      >
        <div
          class="h-full bg-[#0066FF]"
        />
        <div
          class="h-full bg-white/20"
        />
      </div>
    </div>
  </div>
  <div
    class="flex items-center gap-3 mb-3"
  >
    <div
      class="w-10 h-10 rounded-xl flex items-center justify-center"
      style="background: rgba(0, 102, 255, 0.125); color: rgb(0, 102, 255);"
    >
      <svg
        class="lucide lucide-users"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.25"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <path
          d="M16 3.13a4 4 0 0 1 0 7.75"
        />
      </svg>
    </div>
    <div>
      <div
        class="text-[10px] font-mono uppercase tracking-[0.18em]"
        style="color: rgb(0, 102, 255);"
      >
        Community
      </div>
      <h3
        class="text-lg font-semibold text-white leading-tight"
      >
        Innovators Hub
      </h3>
    </div>
  </div>
  <p
    class="text-sm text-white/60 leading-relaxed"
  >
    Coordinate creative DAOs, vote on proposals, fund collaborations.
  </p>
  <div
    class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
  >
    <div
      class="overflow-hidden"
    >
      <div
        class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
      >
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Active members
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            3,412
          </div>
        </div>
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Treasury
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            $184k
          </div>
        </div>
      </div>
      <button
        class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
        style="background: linear-gradient(135deg, rgb(0, 102, 255), rgba(0, 102, 255, 0.8));"
      >
        Start creating 
        <svg
          class="lucide lucide-arrow-right"
          fill="none"
          height="15"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
      </button>
    </div>
  </div>
</article>
`;

exports[`StudiosShowcase – visual regression > matches the card markup snapshot for NeuraSocial 1`] = `
<article
  class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
  style="border-color: rgba(255, 255, 255, 0.08);"
>
  <div
    class="rounded-xl p-4 mb-4 border overflow-hidden"
    style="border-color: rgba(20, 184, 166, 0.19); background: linear-gradient(135deg, rgba(20, 184, 166, 0.082), transparent 70%);"
  >
    <div>
      <div
        class="text-xs text-white/60 mb-2"
      >
        Synced to 5 platforms
      </div>
      <div
        class="flex gap-1.5"
      >
        <div
          class="w-7 h-7 rounded-md border border-[#14B8A6]/40 bg-[#14B8A6]/10 text-[#14B8A6] flex items-center justify-center text-[10px] font-bold"
        >
          X
        </div>
        <div
          class="w-7 h-7 rounded-md border border-[#14B8A6]/40 bg-[#14B8A6]/10 text-[#14B8A6] flex items-center justify-center text-[10px] font-bold"
        >
          IG
        </div>
        <div
          class="w-7 h-7 rounded-md border border-[#14B8A6]/40 bg-[#14B8A6]/10 text-[#14B8A6] flex items-center justify-center text-[10px] font-bold"
        >
          TT
        </div>
        <div
          class="w-7 h-7 rounded-md border border-[#14B8A6]/40 bg-[#14B8A6]/10 text-[#14B8A6] flex items-center justify-center text-[10px] font-bold"
        >
          FC
        </div>
        <div
          class="w-7 h-7 rounded-md border border-[#14B8A6]/40 bg-[#14B8A6]/10 text-[#14B8A6] flex items-center justify-center text-[10px] font-bold"
        >
          LN
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex items-center gap-3 mb-3"
  >
    <div
      class="w-10 h-10 rounded-xl flex items-center justify-center"
      style="background: rgba(20, 184, 166, 0.125); color: rgb(20, 184, 166);"
    >
      <svg
        class="lucide lucide-share2"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.25"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="18"
          cy="5"
          r="3"
        />
        <circle
          cx="6"
          cy="12"
          r="3"
        />
        <circle
          cx="18"
          cy="19"
          r="3"
        />
        <line
          x1="8.59"
          x2="15.42"
          y1="13.51"
          y2="17.49"
        />
        <line
          x1="15.41"
          x2="8.59"
          y1="6.51"
          y2="10.49"
        />
      </svg>
    </div>
    <div>
      <div
        class="text-[10px] font-mono uppercase tracking-[0.18em]"
        style="color: rgb(20, 184, 166);"
      >
        Social
      </div>
      <h3
        class="text-lg font-semibold text-white leading-tight"
      >
        NeuraSocial
      </h3>
    </div>
  </div>
  <p
    class="text-sm text-white/60 leading-relaxed"
  >
    Cross-post to 8+ networks with smart-link analytics and wallet handles.
  </p>
  <div
    class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
  >
    <div
      class="overflow-hidden"
    >
      <div
        class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
      >
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Reach 30d
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            1.2M
          </div>
        </div>
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Click-through
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            6.1%
          </div>
        </div>
      </div>
      <button
        class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
        style="background: linear-gradient(135deg, rgb(20, 184, 166), rgba(20, 184, 166, 0.8));"
      >
        Start creating 
        <svg
          class="lucide lucide-arrow-right"
          fill="none"
          height="15"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
      </button>
    </div>
  </div>
</article>
`;

exports[`StudiosShowcase – visual regression > matches the card markup snapshot for Podcast Studio 1`] = `
<article
  class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
  style="border-color: rgba(255, 255, 255, 0.08);"
>
  <div
    class="rounded-xl p-4 mb-4 border overflow-hidden"
    style="border-color: rgba(245, 158, 11, 0.19); background: linear-gradient(135deg, rgba(245, 158, 11, 0.082), transparent 70%);"
  >
    <div>
      <div
        class="text-xs text-white/60 mb-2"
      >
        Episode 42 · Recording
      </div>
      <div
        class="flex items-end gap-[3px] h-8"
      >
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 40%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 70%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 30%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 90%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 55%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 80%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 35%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 65%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 45%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 75%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 50%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 85%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 30%;"
        />
        <span
          class="w-[4px] rounded-full bg-[#F59E0B]"
          style="height: 60%;"
        />
      </div>
    </div>
  </div>
  <div
    class="flex items-center gap-3 mb-3"
  >
    <div
      class="w-10 h-10 rounded-xl flex items-center justify-center"
      style="background: rgba(245, 158, 11, 0.125); color: rgb(245, 158, 11);"
    >
      <svg
        class="lucide lucide-mic"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.25"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3Z"
        />
        <path
          d="M19 10v2a7 7 0 0 1-14 0v-2"
        />
        <line
          x1="12"
          x2="12"
          y1="19"
          y2="22"
        />
      </svg>
    </div>
    <div>
      <div
        class="text-[10px] font-mono uppercase tracking-[0.18em]"
        style="color: rgb(245, 158, 11);"
      >
        Audio
      </div>
      <h3
        class="text-lg font-semibold text-white leading-tight"
      >
        Podcast Studio
      </h3>
    </div>
  </div>
  <p
    class="text-sm text-white/60 leading-relaxed"
  >
    Record, host, and offer token-gated episodes to loyal listeners.
  </p>
  <div
    class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
  >
    <div
      class="overflow-hidden"
    >
      <div
        class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
      >
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Listeners
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            48,209
          </div>
        </div>
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Subs growth
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            +24%
          </div>
        </div>
      </div>
      <button
        class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
        style="background: linear-gradient(135deg, rgb(245, 158, 11), rgba(245, 158, 11, 0.8));"
      >
        Start creating 
        <svg
          class="lucide lucide-arrow-right"
          fill="none"
          height="15"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
      </button>
    </div>
  </div>
</article>
`;

exports[`StudiosShowcase – visual regression > matches the card markup snapshot for Store Builder 1`] = `
<article
  class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
  style="border-color: rgba(255, 255, 255, 0.08);"
>
  <div
    class="rounded-xl p-4 mb-4 border overflow-hidden"
    style="border-color: rgba(0, 200, 150, 0.19); background: linear-gradient(135deg, rgba(0, 200, 150, 0.082), transparent 70%);"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="w-9 h-9 rounded-lg bg-[#00C896]/20 flex items-center justify-center"
      >
        <svg
          class="lucide lucide-trending-up text-[#00C896]"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="22 7 13.5 15.5 8.5 10.5 2 17"
          />
          <polyline
            points="16 7 22 7 22 13"
          />
        </svg>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="text-xs text-white/60"
        >
          New sale · 2s ago
        </div>
        <div
          class="text-sm font-semibold text-white truncate"
        >
          Genesis Hoodie · 
          <span
            class="text-[#00C896]"
          >
            $84.00
          </span>
        </div>
      </div>
      <span
        class="w-2 h-2 rounded-full bg-[#00C896] animate-pulse"
      />
    </div>
  </div>
  <div
    class="flex items-center gap-3 mb-3"
  >
    <div
      class="w-10 h-10 rounded-xl flex items-center justify-center"
      style="background: rgba(0, 200, 150, 0.125); color: rgb(0, 200, 150);"
    >
      <svg
        class="lucide lucide-shopping-bag"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.25"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z"
        />
        <path
          d="M3 6h18"
        />
        <path
          d="M16 10a4 4 0 0 1-8 0"
        />
      </svg>
    </div>
    <div>
      <div
        class="text-[10px] font-mono uppercase tracking-[0.18em]"
        style="color: rgb(0, 200, 150);"
      >
        Commerce
      </div>
      <h3
        class="text-lg font-semibold text-white leading-tight"
      >
        Store Builder
      </h3>
    </div>
  </div>
  <p
    class="text-sm text-white/60 leading-relaxed"
  >
    Sell digital goods, merch & NFT-gated content with Stripe + crypto checkout.
  </p>
  <div
    class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
  >
    <div
      class="overflow-hidden"
    >
      <div
        class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
      >
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Earnings 30d
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            $12,480
          </div>
        </div>
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Conversion
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            4.8%
          </div>
        </div>
      </div>
      <button
        class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
        style="background: linear-gradient(135deg, rgb(0, 200, 150), rgba(0, 200, 150, 0.8));"
      >
        Start creating 
        <svg
          class="lucide lucide-arrow-right"
          fill="none"
          height="15"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
      </button>
    </div>
  </div>
</article>
`;

exports[`StudiosShowcase – visual regression > matches the card markup snapshot for Threaditor 1`] = `
<article
  class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
  style="border-color: rgba(255, 255, 255, 0.08);"
>
  <div
    class="rounded-xl p-4 mb-4 border overflow-hidden"
    style="border-color: rgba(155, 92, 246, 0.19); background: linear-gradient(135deg, rgba(155, 92, 246, 0.082), transparent 70%);"
  >
    <div>
      <div
        class="flex items-center justify-between mb-2"
      >
        <span
          class="text-xs text-white/60"
        >
          Articles minted today
        </span>
        <span
          class="text-xs font-mono text-[#9B5CF6]"
        >
          +12
        </span>
      </div>
      <div
        class="text-2xl font-bold text-white tracking-tight"
      >
        1,284
      </div>
      <div
        class="mt-2 h-1.5 rounded-full bg-white/10 overflow-hidden"
      >
        <div
          class="h-full bg-gradient-to-r from-[#9B5CF6] to-[#c084fc]"
        />
      </div>
    </div>
  </div>
  <div
    class="flex items-center gap-3 mb-3"
  >
    <div
      class="w-10 h-10 rounded-xl flex items-center justify-center"
      style="background: rgba(155, 92, 246, 0.125); color: rgb(155, 92, 246);"
    >
      <svg
        class="lucide lucide-pen-line"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.25"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20h9"
        />
        <path
          d="M16.376 3.622a1 1 0 0 1 3.002 3.002L7.368 18.635a2 2 0 0 1-.855.506l-2.872.838a.5.5 0 0 1-.62-.62l.838-2.872a2 2 0 0 1 .506-.854z"
        />
      </svg>
    </div>
    <div>
      <div
        class="text-[10px] font-mono uppercase tracking-[0.18em]"
        style="color: rgb(155, 92, 246);"
      >
        Publishing
      </div>
      <h3
        class="text-lg font-semibold text-white leading-tight"
      >
        Threaditor
      </h3>
    </div>
  </div>
  <p
    class="text-sm text-white/60 leading-relaxed"
  >
    Long-form posts minted as ERC-721 collectibles with lifetime royalties.
  </p>
  <div
    class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
  >
    <div
      class="overflow-hidden"
    >
      <div
        class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
      >
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Articles minted
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            1,284
          </div>
        </div>
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Avg. royalty
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            8.5%
          </div>
        </div>
      </div>
      <button
        class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
        style="background: linear-gradient(135deg, rgb(155, 92, 246), rgba(155, 92, 246, 0.8));"
      >
        Start creating 
        <svg
          class="lucide lucide-arrow-right"
          fill="none"
          height="15"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
      </button>
    </div>
  </div>
</article>
`;

exports[`StudiosShowcase – visual regression > matches the card markup snapshot for Video Studio 1`] = `
<article
  class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
  style="border-color: rgba(255, 255, 255, 0.08);"
>
  <div
    class="rounded-xl p-4 mb-4 border overflow-hidden"
    style="border-color: rgba(255, 107, 53, 0.19); background: linear-gradient(135deg, rgba(255, 107, 53, 0.082), transparent 70%);"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="px-2 py-0.5 rounded-md text-[10px] font-bold uppercase tracking-wider bg-[#FF6B35] text-white"
        >
          ● Live
        </span>
        <span
          class="text-xs text-white/60"
        >
          Drop #04
        </span>
      </div>
      <div
        class="flex items-center gap-1.5 text-white"
      >
        <svg
          class="lucide lucide-eye text-[#FF6B35]"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        <span
          class="text-sm font-semibold tabular-nums"
        >
          2,418
        </span>
      </div>
    </div>
  </div>
  <div
    class="flex items-center gap-3 mb-3"
  >
    <div
      class="w-10 h-10 rounded-xl flex items-center justify-center"
      style="background: rgba(255, 107, 53, 0.125); color: rgb(255, 107, 53);"
    >
      <svg
        class="lucide lucide-play"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.25"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="6 3 20 12 6 21 6 3"
        />
      </svg>
    </div>
    <div>
      <div
        class="text-[10px] font-mono uppercase tracking-[0.18em]"
        style="color: rgb(255, 107, 53);"
      >
        Video
      </div>
      <h3
        class="text-lg font-semibold text-white leading-tight"
      >
        Video Studio
      </h3>
    </div>
  </div>
  <p
    class="text-sm text-white/60 leading-relaxed"
  >
    Upload, host, and gate premium series behind token ownership.
  </p>
  <div
    class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
  >
    <div
      class="overflow-hidden"
    >
      <div
        class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
      >
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Watch time
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            92.4k hr
          </div>
        </div>
        <div>
          <div
            class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
          >
            Engagement
          </div>
          <div
            class="text-sm font-semibold text-white"
          >
            +18%
          </div>
        </div>
      </div>
      <button
        class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
        style="background: linear-gradient(135deg, rgb(255, 107, 53), rgba(255, 107, 53, 0.8));"
      >
        Start creating 
        <svg
          class="lucide lucide-arrow-right"
          fill="none"
          height="15"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="m12 5 7 7-7 7"
          />
        </svg>
      </button>
    </div>
  </div>
</article>
`;

exports[`StudiosShowcase – visual regression > matches the full showcase snapshot 1`] = `
<section
  class="relative py-24 px-6 overflow-hidden bg-[#0A0A0F]"
>
  <div
    class="pointer-events-none absolute inset-0 opacity-60"
  >
    <div
      class="absolute -top-32 left-1/4 w-[480px] h-[480px] rounded-full blur-3xl bg-[#9B5CF6]/20"
    />
    <div
      class="absolute -bottom-32 right-1/4 w-[520px] h-[520px] rounded-full blur-3xl bg-[#0066FF]/20"
    />
  </div>
  <div
    class="relative max-w-6xl mx-auto"
  >
    <div
      class="text-center mb-10"
    >
      <div
        class="text-xs font-mono tracking-[0.2em] uppercase text-white/50 mb-3"
      >
        Everything you need
      </div>
      <h2
        class="text-4xl md:text-5xl font-bold tracking-tight"
      >
        <span
          class="bg-clip-text text-transparent bg-gradient-to-r from-white via-white to-white/60"
        >
          Six studios. 
        </span>
        <span
          class="bg-clip-text text-transparent bg-gradient-to-r from-[#9B5CF6] via-[#FF6B35] to-[#14B8A6]"
        >
          One platform.
        </span>
      </h2>
      <p
        class="text-white/60 mt-4 max-w-xl mx-auto leading-relaxed"
      >
        Every tool a creator needs — store, blog, video, podcast, social and DAO — unified under one roof with Web3 built in from day one.
      </p>
    </div>
    <div
      class="flex justify-center mb-12"
    >
      <div
        class="inline-flex p-1 rounded-full border border-white/10 bg-white/5 backdrop-blur-md"
      >
        <button
          class="relative px-4 md:px-5 py-2 text-sm font-medium rounded-full transition-colors text-white"
        >
          <span
            class="absolute inset-0 rounded-full bg-white/10 border border-white/15"
          />
          <span
            class="relative"
          >
            All
          </span>
        </button>
        <button
          class="relative px-4 md:px-5 py-2 text-sm font-medium rounded-full transition-colors text-white/60 hover:text-white/90"
        >
          <span
            class="relative"
          >
            Monetization
          </span>
        </button>
        <button
          class="relative px-4 md:px-5 py-2 text-sm font-medium rounded-full transition-colors text-white/60 hover:text-white/90"
        >
          <span
            class="relative"
          >
            Content
          </span>
        </button>
        <button
          class="relative px-4 md:px-5 py-2 text-sm font-medium rounded-full transition-colors text-white/60 hover:text-white/90"
        >
          <span
            class="relative"
          >
            Community
          </span>
        </button>
      </div>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
    >
      <div>
        <article
          class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
          style="border-color: rgba(255, 255, 255, 0.08);"
        >
          <div
            class="rounded-xl p-4 mb-4 border overflow-hidden"
            style="border-color: rgba(0, 200, 150, 0.19); background: linear-gradient(135deg, rgba(0, 200, 150, 0.082), transparent 70%);"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="w-9 h-9 rounded-lg bg-[#00C896]/20 flex items-center justify-center"
              >
                <svg
                  class="lucide lucide-trending-up text-[#00C896]"
                  fill="none"
                  height="16"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="22 7 13.5 15.5 8.5 10.5 2 17"
                  />
                  <polyline
                    points="16 7 22 7 22 13"
                  />
                </svg>
              </div>
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="text-xs text-white/60"
                >
                  New sale · 2s ago
                </div>
                <div
                  class="text-sm font-semibold text-white truncate"
                >
                  Genesis Hoodie · 
                  <span
                    class="text-[#00C896]"
                  >
                    $84.00
                  </span>
                </div>
              </div>
              <span
                class="w-2 h-2 rounded-full bg-[#00C896] animate-pulse"
              />
            </div>
          </div>
          <div
            class="flex items-center gap-3 mb-3"
          >
            <div
              class="w-10 h-10 rounded-xl flex items-center justify-center"
              style="background: rgba(0, 200, 150, 0.125); color: rgb(0, 200, 150);"
            >
              <svg
                class="lucide lucide-shopping-bag"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.25"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z"
                />
                <path
                  d="M3 6h18"
                />
                <path
                  d="M16 10a4 4 0 0 1-8 0"
                />
              </svg>
            </div>
            <div>
              <div
                class="text-[10px] font-mono uppercase tracking-[0.18em]"
                style="color: rgb(0, 200, 150);"
              >
                Commerce
              </div>
              <h3
                class="text-lg font-semibold text-white leading-tight"
              >
                Store Builder
              </h3>
            </div>
          </div>
          <p
            class="text-sm text-white/60 leading-relaxed"
          >
            Sell digital goods, merch & NFT-gated content with Stripe + crypto checkout.
          </p>
          <div
            class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
          >
            <div
              class="overflow-hidden"
            >
              <div
                class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
              >
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Earnings 30d
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    $12,480
                  </div>
                </div>
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Conversion
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    4.8%
                  </div>
                </div>
              </div>
              <button
                class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
                style="background: linear-gradient(135deg, rgb(0, 200, 150), rgba(0, 200, 150, 0.8));"
              >
                Start creating 
                <svg
                  class="lucide lucide-arrow-right"
                  fill="none"
                  height="15"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="m12 5 7 7-7 7"
                  />
                </svg>
              </button>
            </div>
          </div>
        </article>
      </div>
      <div>
        <article
          class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
          style="border-color: rgba(255, 255, 255, 0.08);"
        >
          <div
            class="rounded-xl p-4 mb-4 border overflow-hidden"
            style="border-color: rgba(155, 92, 246, 0.19); background: linear-gradient(135deg, rgba(155, 92, 246, 0.082), transparent 70%);"
          >
            <div>
              <div
                class="flex items-center justify-between mb-2"
              >
                <span
                  class="text-xs text-white/60"
                >
                  Articles minted today
                </span>
                <span
                  class="text-xs font-mono text-[#9B5CF6]"
                >
                  +12
                </span>
              </div>
              <div
                class="text-2xl font-bold text-white tracking-tight"
              >
                1,284
              </div>
              <div
                class="mt-2 h-1.5 rounded-full bg-white/10 overflow-hidden"
              >
                <div
                  class="h-full bg-gradient-to-r from-[#9B5CF6] to-[#c084fc]"
                />
              </div>
            </div>
          </div>
          <div
            class="flex items-center gap-3 mb-3"
          >
            <div
              class="w-10 h-10 rounded-xl flex items-center justify-center"
              style="background: rgba(155, 92, 246, 0.125); color: rgb(155, 92, 246);"
            >
              <svg
                class="lucide lucide-pen-line"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.25"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 20h9"
                />
                <path
                  d="M16.376 3.622a1 1 0 0 1 3.002 3.002L7.368 18.635a2 2 0 0 1-.855.506l-2.872.838a.5.5 0 0 1-.62-.62l.838-2.872a2 2 0 0 1 .506-.854z"
                />
              </svg>
            </div>
            <div>
              <div
                class="text-[10px] font-mono uppercase tracking-[0.18em]"
                style="color: rgb(155, 92, 246);"
              >
                Publishing
              </div>
              <h3
                class="text-lg font-semibold text-white leading-tight"
              >
                Threaditor
              </h3>
            </div>
          </div>
          <p
            class="text-sm text-white/60 leading-relaxed"
          >
            Long-form posts minted as ERC-721 collectibles with lifetime royalties.
          </p>
          <div
            class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
          >
            <div
              class="overflow-hidden"
            >
              <div
                class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
              >
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Articles minted
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    1,284
                  </div>
                </div>
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Avg. royalty
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    8.5%
                  </div>
                </div>
              </div>
              <button
                class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
                style="background: linear-gradient(135deg, rgb(155, 92, 246), rgba(155, 92, 246, 0.8));"
              >
                Start creating 
                <svg
                  class="lucide lucide-arrow-right"
                  fill="none"
                  height="15"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="m12 5 7 7-7 7"
                  />
                </svg>
              </button>
            </div>
          </div>
        </article>
      </div>
      <div>
        <article
          class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
          style="border-color: rgba(255, 255, 255, 0.08);"
        >
          <div
            class="rounded-xl p-4 mb-4 border overflow-hidden"
            style="border-color: rgba(255, 107, 53, 0.19); background: linear-gradient(135deg, rgba(255, 107, 53, 0.082), transparent 70%);"
          >
            <div
              class="flex items-center justify-between"
            >
              <div
                class="flex items-center gap-2"
              >
                <span
                  class="px-2 py-0.5 rounded-md text-[10px] font-bold uppercase tracking-wider bg-[#FF6B35] text-white"
                >
                  ● Live
                </span>
                <span
                  class="text-xs text-white/60"
                >
                  Drop #04
                </span>
              </div>
              <div
                class="flex items-center gap-1.5 text-white"
              >
                <svg
                  class="lucide lucide-eye text-[#FF6B35]"
                  fill="none"
                  height="14"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="3"
                  />
                </svg>
                <span
                  class="text-sm font-semibold tabular-nums"
                >
                  2,418
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center gap-3 mb-3"
          >
            <div
              class="w-10 h-10 rounded-xl flex items-center justify-center"
              style="background: rgba(255, 107, 53, 0.125); color: rgb(255, 107, 53);"
            >
              <svg
                class="lucide lucide-play"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.25"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="6 3 20 12 6 21 6 3"
                />
              </svg>
            </div>
            <div>
              <div
                class="text-[10px] font-mono uppercase tracking-[0.18em]"
                style="color: rgb(255, 107, 53);"
              >
                Video
              </div>
              <h3
                class="text-lg font-semibold text-white leading-tight"
              >
                Video Studio
              </h3>
            </div>
          </div>
          <p
            class="text-sm text-white/60 leading-relaxed"
          >
            Upload, host, and gate premium series behind token ownership.
          </p>
          <div
            class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
          >
            <div
              class="overflow-hidden"
            >
              <div
                class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
              >
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Watch time
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    92.4k hr
                  </div>
                </div>
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Engagement
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    +18%
                  </div>
                </div>
              </div>
              <button
                class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
                style="background: linear-gradient(135deg, rgb(255, 107, 53), rgba(255, 107, 53, 0.8));"
              >
                Start creating 
                <svg
                  class="lucide lucide-arrow-right"
                  fill="none"
                  height="15"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="m12 5 7 7-7 7"
                  />
                </svg>
              </button>
            </div>
          </div>
        </article>
      </div>
      <div>
        <article
          class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
          style="border-color: rgba(255, 255, 255, 0.08);"
        >
          <div
            class="rounded-xl p-4 mb-4 border overflow-hidden"
            style="border-color: rgba(20, 184, 166, 0.19); background: linear-gradient(135deg, rgba(20, 184, 166, 0.082), transparent 70%);"
          >
            <div>
              <div
                class="text-xs text-white/60 mb-2"
              >
                Synced to 5 platforms
              </div>
              <div
                class="flex gap-1.5"
              >
                <div
                  class="w-7 h-7 rounded-md border border-[#14B8A6]/40 bg-[#14B8A6]/10 text-[#14B8A6] flex items-center justify-center text-[10px] font-bold"
                >
                  X
                </div>
                <div
                  class="w-7 h-7 rounded-md border border-[#14B8A6]/40 bg-[#14B8A6]/10 text-[#14B8A6] flex items-center justify-center text-[10px] font-bold"
                >
                  IG
                </div>
                <div
                  class="w-7 h-7 rounded-md border border-[#14B8A6]/40 bg-[#14B8A6]/10 text-[#14B8A6] flex items-center justify-center text-[10px] font-bold"
                >
                  TT
                </div>
                <div
                  class="w-7 h-7 rounded-md border border-[#14B8A6]/40 bg-[#14B8A6]/10 text-[#14B8A6] flex items-center justify-center text-[10px] font-bold"
                >
                  FC
                </div>
                <div
                  class="w-7 h-7 rounded-md border border-[#14B8A6]/40 bg-[#14B8A6]/10 text-[#14B8A6] flex items-center justify-center text-[10px] font-bold"
                >
                  LN
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center gap-3 mb-3"
          >
            <div
              class="w-10 h-10 rounded-xl flex items-center justify-center"
              style="background: rgba(20, 184, 166, 0.125); color: rgb(20, 184, 166);"
            >
              <svg
                class="lucide lucide-share2"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.25"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="18"
                  cy="5"
                  r="3"
                />
                <circle
                  cx="6"
                  cy="12"
                  r="3"
                />
                <circle
                  cx="18"
                  cy="19"
                  r="3"
                />
                <line
                  x1="8.59"
                  x2="15.42"
                  y1="13.51"
                  y2="17.49"
                />
                <line
                  x1="15.41"
                  x2="8.59"
                  y1="6.51"
                  y2="10.49"
                />
              </svg>
            </div>
            <div>
              <div
                class="text-[10px] font-mono uppercase tracking-[0.18em]"
                style="color: rgb(20, 184, 166);"
              >
                Social
              </div>
              <h3
                class="text-lg font-semibold text-white leading-tight"
              >
                NeuraSocial
              </h3>
            </div>
          </div>
          <p
            class="text-sm text-white/60 leading-relaxed"
          >
            Cross-post to 8+ networks with smart-link analytics and wallet handles.
          </p>
          <div
            class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
          >
            <div
              class="overflow-hidden"
            >
              <div
                class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
              >
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Reach 30d
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    1.2M
                  </div>
                </div>
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Click-through
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    6.1%
                  </div>
                </div>
              </div>
              <button
                class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
                style="background: linear-gradient(135deg, rgb(20, 184, 166), rgba(20, 184, 166, 0.8));"
              >
                Start creating 
                <svg
                  class="lucide lucide-arrow-right"
                  fill="none"
                  height="15"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="m12 5 7 7-7 7"
                  />
                </svg>
              </button>
            </div>
          </div>
        </article>
      </div>
      <div>
        <article
          class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
          style="border-color: rgba(255, 255, 255, 0.08);"
        >
          <div
            class="rounded-xl p-4 mb-4 border overflow-hidden"
            style="border-color: rgba(245, 158, 11, 0.19); background: linear-gradient(135deg, rgba(245, 158, 11, 0.082), transparent 70%);"
          >
            <div>
              <div
                class="text-xs text-white/60 mb-2"
              >
                Episode 42 · Recording
              </div>
              <div
                class="flex items-end gap-[3px] h-8"
              >
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 40%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 70%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 30%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 90%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 55%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 80%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 35%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 65%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 45%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 75%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 50%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 85%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 30%;"
                />
                <span
                  class="w-[4px] rounded-full bg-[#F59E0B]"
                  style="height: 60%;"
                />
              </div>
            </div>
          </div>
          <div
            class="flex items-center gap-3 mb-3"
          >
            <div
              class="w-10 h-10 rounded-xl flex items-center justify-center"
              style="background: rgba(245, 158, 11, 0.125); color: rgb(245, 158, 11);"
            >
              <svg
                class="lucide lucide-mic"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.25"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2a3 3 0 0 0-3 3v7a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3Z"
                />
                <path
                  d="M19 10v2a7 7 0 0 1-14 0v-2"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="19"
                  y2="22"
                />
              </svg>
            </div>
            <div>
              <div
                class="text-[10px] font-mono uppercase tracking-[0.18em]"
                style="color: rgb(245, 158, 11);"
              >
                Audio
              </div>
              <h3
                class="text-lg font-semibold text-white leading-tight"
              >
                Podcast Studio
              </h3>
            </div>
          </div>
          <p
            class="text-sm text-white/60 leading-relaxed"
          >
            Record, host, and offer token-gated episodes to loyal listeners.
          </p>
          <div
            class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
          >
            <div
              class="overflow-hidden"
            >
              <div
                class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
              >
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Listeners
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    48,209
                  </div>
                </div>
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Subs growth
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    +24%
                  </div>
                </div>
              </div>
              <button
                class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
                style="background: linear-gradient(135deg, rgb(245, 158, 11), rgba(245, 158, 11, 0.8));"
              >
                Start creating 
                <svg
                  class="lucide lucide-arrow-right"
                  fill="none"
                  height="15"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="m12 5 7 7-7 7"
                  />
                </svg>
              </button>
            </div>
          </div>
        </article>
      </div>
      <div>
        <article
          class="group relative h-full rounded-2xl p-5 border bg-white/[0.04] backdrop-blur-xl overflow-hidden"
          style="border-color: rgba(255, 255, 255, 0.08);"
        >
          <div
            class="rounded-xl p-4 mb-4 border overflow-hidden"
            style="border-color: rgba(0, 102, 255, 0.19); background: linear-gradient(135deg, rgba(0, 102, 255, 0.082), transparent 70%);"
          >
            <div>
              <div
                class="flex items-center justify-between mb-2"
              >
                <span
                  class="text-xs text-white/60"
                >
                  Proposal RIP-47
                </span>
                <span
                  class="text-xs font-mono text-[#0066FF] flex items-center gap-1"
                >
                  <svg
                    class="lucide lucide-sparkles"
                    fill="none"
                    height="11"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="11"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                    />
                    <path
                      d="M20 3v4"
                    />
                    <path
                      d="M22 5h-4"
                    />
                    <path
                      d="M4 17v2"
                    />
                    <path
                      d="M5 18H3"
                    />
                  </svg>
                   68% yes
                </span>
              </div>
              <div
                class="h-1.5 rounded-full bg-white/10 overflow-hidden flex"
              >
                <div
                  class="h-full bg-[#0066FF]"
                />
                <div
                  class="h-full bg-white/20"
                />
              </div>
            </div>
          </div>
          <div
            class="flex items-center gap-3 mb-3"
          >
            <div
              class="w-10 h-10 rounded-xl flex items-center justify-center"
              style="background: rgba(0, 102, 255, 0.125); color: rgb(0, 102, 255);"
            >
              <svg
                class="lucide lucide-users"
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2.25"
                viewBox="0 0 24 24"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="9"
                  cy="7"
                  r="4"
                />
                <path
                  d="M22 21v-2a4 4 0 0 0-3-3.87"
                />
                <path
                  d="M16 3.13a4 4 0 0 1 0 7.75"
                />
              </svg>
            </div>
            <div>
              <div
                class="text-[10px] font-mono uppercase tracking-[0.18em]"
                style="color: rgb(0, 102, 255);"
              >
                Community
              </div>
              <h3
                class="text-lg font-semibold text-white leading-tight"
              >
                Innovators Hub
              </h3>
            </div>
          </div>
          <p
            class="text-sm text-white/60 leading-relaxed"
          >
            Coordinate creative DAOs, vote on proposals, fund collaborations.
          </p>
          <div
            class="grid grid-rows-[0fr] group-hover:grid-rows-[1fr] transition-[grid-template-rows] duration-500 ease-out"
          >
            <div
              class="overflow-hidden"
            >
              <div
                class="pt-4 mt-4 border-t border-white/10 grid grid-cols-2 gap-3"
              >
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Active members
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    3,412
                  </div>
                </div>
                <div>
                  <div
                    class="text-[10px] uppercase tracking-wider text-white/40 mb-1"
                  >
                    Treasury
                  </div>
                  <div
                    class="text-sm font-semibold text-white"
                  >
                    $184k
                  </div>
                </div>
              </div>
              <button
                class="mt-4 w-full inline-flex items-center justify-center gap-2 rounded-xl px-4 py-2.5 text-sm font-semibold text-white transition-transform active:scale-[0.98]"
                style="background: linear-gradient(135deg, rgb(0, 102, 255), rgba(0, 102, 255, 0.8));"
              >
                Start creating 
                <svg
                  class="lucide lucide-arrow-right"
                  fill="none"
                  height="15"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="m12 5 7 7-7 7"
                  />
                </svg>
              </button>
            </div>
          </div>
        </article>
      </div>
    </div>
  </div>
</section>
`;
